--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "helmet": "^4.1.1",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0"
