--- a/nos-tech/package.json
+++ b/nos-tech/package.json
@@ -11,9 +11,13 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-multi-carousel": "^2.5.5",
+    "react-redux": "^7.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.29.3"
   },
   "scripts": {
