--- a/nos-tech/package.json
+++ b/nos-tech/package.json
@@ -1,14 +1,20 @@
 {
   "name": "learning-management-system",
+  "proxy": "http://localhost:3001",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "file-selector": "^0.2.2",
     "formik": "^2.2.0",
+    "ra-data-rest-client": "^1.1.1",
+    "ra-data-simple-rest": "^3.9.3",
     "react": "^16.13.1",
+    "react-admin": "^3.9.4",
     "react-alice-carousel": "^2.0.2",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
