Active links and bugs fixed

--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "data:import": "node src/seeder",
-    "data:destroy": "node src/seeder -d"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
