--- a/nos-tech/package.json
+++ b/nos-tech/package.json
@@ -13,6 +13,7 @@
     "file-selector": "^0.2.2",
     "formik": "^2.2.0",
     "formik-field": "^1.6.0",
+    "jwt-decode": "^3.0.0",
     "ra-data-rest-client": "^1.1.1",
     "ra-data-simple-rest": "^3.9.3",
     "react": "^16.13.1",
