--- a/nos-tech/package.json
+++ b/nos-tech/package.json
@@ -27,6 +27,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "react-select": "^3.1.0",
+    "react-toast-notifications": "^2.4.0",
+    "react-toastify": "^6.0.9",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.6",
