--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.14",
+    "nodemailer-mailgun-transport": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
