--- a/nos-tech/package.json
+++ b/nos-tech/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-notify-toast": "^0.5.1",
     "react-redux": "^7.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
