--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
-    "nodemailer-mailgun-transport": "^2.0.1"
+    "nodemailer-mailgun-transport": "^2.0.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
