--- a/nos-tech/package.json
+++ b/nos-tech/package.json
@@ -36,6 +36,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "react-select": "^3.1.1",
     "react-toast-notifications": "^2.4.0",
     "react-toastify": "^6.0.9",
     "react-tooltip": "^4.2.10",
